[metadata]
name = ThreadShare
description-file = README.md
url = https://github.com/benjamincham/ThreadShare
project_urls =
    Bug Tracker = https://github.com/benjamincham/ThreadShare/issues
    Changelog = https://github.com/benjamincham/ThreadShare/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers




